--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@types/multer": "^1.4.7",
+    "csv-parse": "^5.3.0",
     "express": "^4.17.1",
+    "multer": "^1.4.5-lts.1",
     "ts-node-dev": "^2.0.0",
     "uuid": "^8.3.2"
   }
