--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
@@ -30,6 +31,7 @@
     "csv-parse": "^5.3.0",
     "express": "^4.17.1",
     "multer": "^1.4.5-lts.1",
+    "swagger-ui-express": "^4.5.0",
     "ts-node-dev": "^2.0.0",
     "uuid": "^8.3.2"
   }
